Fixed #7 - route to retrieve latest value for a sensor
